--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBlFJXK6ZA9yaySir08Fus-VeayKX7TF1w"></script>
-    <title>artist-location</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Indie+Flower|Permanent+Marker" rel="stylesheet">    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBlFJXK6ZA9yaySir08Fus-VeayKX7TF1w"></script>
+    <title>WeCollab</title>
   </head>
   <body>
     <div id="app"></div>
