--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Indie+Flower|Permanent+Marker" rel="stylesheet">    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBlFJXK6ZA9yaySir08Fus-VeayKX7TF1w"></script>
+<link href="https://fonts.googleapis.com/css?family=Indie+Flower|Permanent+Marker" rel="stylesheet">
+ <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBlFJXK6ZA9yaySir08Fus-VeayKX7TF1w"></script>
     <title>WeCollab</title>
   </head>
   <body>
